--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,16 +81,16 @@ services:
     networks:
       - server_network
 
-  redis:
-    image: redis/redis-stack:latest
-    restart: always
-    container_name: redis-stack
-    ports:
-      - 6379:6379
-    volumes:
-      - ./.data/docker/redis:/var/lib/redis
-    networks:
-      - server_network
+  # redis:
+  #   image: redis/redis-stack:latest
+  #   restart: always
+  #   container_name: redis-stack
+  #   ports:
+  #     - 6379:6379
+  #   volumes:
+  #     - ./.data/docker/redis:/var/lib/redis
+  #   networks:
+  #     - server_network
 
 networks:
   server_network:
